# LocaLLM

./: .dockerignore  .env  .gitignore  Dockerfile  Home.htmx  README.md  alembic.ini  app.py  docker-compose.services.yml  docker-compose.yml  generate_dep.sh  manage.py  otel-collector-config.yaml  prometheus.yml  pyproject.toml  requirements.txt  tailwind.config.js  tempo.yaml
data/models/: .key
exceptions/: exceptions.py
pgadmin-servers/: servers.json
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 001_initial.py
src/api/exceptions/: exceptions.py
src/api/middleware/: error_handlers.py  telemetry.py
src/api/routes/: configuration.py  frontend.py  generation.py  health.py
src/api/utility/: utilities.py
src/config/: database.py  logging_config.py  settings.py
src/db/: session.py  unit_of_work.py
src/dependencies/: container.py
src/models/: database.py  decorators.py  dto.py  enum.py  pydantic.py
src/repositories/: base_repository.py  conversation_repository.py  interfaces.py  message_repository.py  model_repository.py  settings_repository.py
src/services/: container.py  conversation_context.py  conversation_service.py  database.py  database_context.py  dependencies.py  llm_generate.py  message_service.py  model_discovery_service.py  settings_service.py  storage_service.py
src/services/settings/: value_handler.py
src/utils/: system_capabilities.py
tests/api/: test_generation.py
websrc/: main.py
websrc/api/exceptions/: exceptions.py
websrc/api/middleware/: error_handlers.py  logging.py  telemetry.py
websrc/api/routes/: configuration.py  conversations.py  frontend.py  generation.py  health.py  models.py  settings.py
websrc/api/utility/: utilities.py
websrc/config/: celery_config.py  logging_config.py  logging_manager.py  settings.py
websrc/models/: pydantic.py
websrc/services/: dependencies.py  llm_generate.py
websrc/static/: index.html
websrc/static/css/: chat.css
websrc/static/js/: chat.js
websrc/tasks/: model_tasks.py
websrc/templates/: api.html  base.html  index.html  landing.html  models.html  settings.html
websrc/templates/components/: api-settings.html  chat-message.html  head.html  home-settings.html  model-manager.html  nav.html  settings-modal.html
websrc/templates/components/chat/: main-area.html  sidebar.html
websrc/templates/components/scripts/: chat.html  download-worker.html  htmx-handlers.html  loading.html  tailwind-config.html
websrc/templates/components/styles/: chat.html
