[tool.poetry]
name = "locallm"
version = "0.1.0"
description = "Local LLM server with FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
opentelemetry-sdk = "^1.28.1"
opentelemetry-instrumentation = "^0.49b1"
opentelemetry-instrumentation-fastapi = "^0.49b1"
opentelemetry-instrumentation-logging = "^0.49b1"
opentelemetry-instrumentation-requests = "^0.49b1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
