[tool.poetry]
name = "locallm"
version = "0.1.0"
description = "Local LLM server with FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10" 
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
opentelemetry-sdk = "^1.28.1"
opentelemetry-instrumentation = "^0.49b1"
opentelemetry-instrumentation-fastapi = "^0.49b1"
opentelemetry-instrumentation-logging = "^0.49b1"
opentelemetry-instrumentation-requests = "^0.49b1"
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
aiocache = "^0.12.3"
opentelemetry-exporter-otlp = "^1.28.1"
jinja2 = "^3.1.4"
opentelemetry-distro = "^0.49b1"
python-dotenv = "^1.0.1"
opentelemetry-exporter-jaeger-thrift = "^1.21.0"
python-multipart = "^0.0.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"